install base data function finished

--- a/public/css/general.css
+++ b/public/css/general.css
@@ -110,6 +110,13 @@ input, select {
   margin-right:3px;
 }
 
+#monitor-close {
+  position:absolute;
+  top:10px;
+  right:10px;
+  cursor:pointer;
+}
+
 #notice {
   background:#fff;
   margin:0px;
