--- a/public/css/admin/general.css
+++ b/public/css/admin/general.css
@@ -55,622 +55,6 @@ input.capital {
   text-transform: uppercase;
 }
 
-/* 文件校验 */
-.infobox {
-  background:#F2F9FD  none repeat scroll 0 0;
-  border:4px solid #BBDDE5;
-  clear:both;
-  margin:60px 30px;
-  padding:20px;
-  text-align:center;
-}
-.normal {
-  font-weight:400;font-size:12px;
-}
-.marginbot {
-  margin-bottom:10px;
-}
-.nobdb {
-  border-bottom:medium none;
-}
-.btn {
-  background:#DDDDDD none repeat scroll 0 0;
-  border-color:#DDDDDD #666666 #666666 #DDDDDD;
-  color:#000000;
-  cursor:pointer;
-  margin:3px 0;
-  padding:2px 5px;
-  vertical-align:middle;
-}
-.infotitle1{
-  margin-bottom:10px;
-  color:#09C;
-  font-size:14px;
-  font-weight:700;
-}
-em, cite, th {
-  font-style:normal;
-  font-weight:normal;
-}
-.left {
-  float:left;
-}
-.lightfont {
-  color:#CCCCCC;
-}
-.left .cfolder, .left .ofolder{
-  display:block;
-  padding-left:50px;
-  line-height:30px;
-  background:url(../images/filecheck.gif) no-repeat -260px -50px;
-  font-weight:700;
-  font-size:14px;
-  color:#2366A8;
-}
-.left .ofolder{
-  background:url(../images/filecheck.gif) no-repeat -260px -100px;
-  color:#2366A8;
-  font-size:14px;
-}
-.filenum{
-  margin:8px 0 0 20px;
-}
-.files{
-  padding:1px 0 1px 50px;
-  background:url(../images/filecheck.gif) no-repeat -260px -150px;
-}
-.del{
-  padding-left:18px;
-  background:url(../images/filecheck.gif) no-repeat 0 -285px;
-  *background:url(../images/filecheck.gif) no-repeat 0 -286px;
-  color:#E8594D;
-}
-.edited{
-  padding-left:18px;
-  background:url(../images/filecheck.gif) no-repeat -100px -385px;
-  *background:url(../images/filecheck.gif) no-repeat -100px -386px;
-  color:#E8594D;
-}
-.unknown{
-  padding-left:18px;
-  background:url(../images/filecheck.gif) no-repeat -50px -435px;
-  *background:url(../images/filecheck.gif) no-repeat -50px -436px;
-  color:#6189B8;
-}
-.correct{
-  padding-left:18px;
-  background:url(../images/filecheck.gif) no-repeat 0 -485px;
-  *background:url(../images/filecheck.gif) no-repeat 0 -486px;
-  color:#70B759;
-}
-.tb2 th, .tb2 td {
-  background:transparent url(../images/bg_repx.gif) repeat-x scroll 0 bottom;
-  padding:5px 5px 5px 0;
-  text-align:left;
-}
-.tb2 th {
-  line-height:21px;
-  font-weight:bold;
-}
-.bold {
-  font-weight:700;
-}
-/* 模板管理 */
-#messageATX {
-  position:absolute;
-  z-index:100;
-  display:none;
-}
-#messageATX .bgtable{
-  width:40px;
-  height:120px;
-  border:solid 1px #000000;
-  background:#FFFFE1;
-}
-#messageATX .colortable{
-  height:20px;
-  border:solid 1px #FFFFFF;
-  cursor:pointer;
-}
-
-#CurrTplStyleList{
-  margin-top:8px;
-}
-
-
-
-/*
- 标签部分的样式
- */
-.custab-div {
-  background: #EEF8F9;
-  border: 1px solid #BBDDE5;
-  margin: 0 0 10px 0;
-  padding: 1px;
-}
-#custabbar-div {
-  background: #80BDCB;
-  padding-left: 10px;
-  height: 22px;
-  overflow : hidden;
-}
-
-#custabbar-div p {
-  margin: 2px 0 0 0;
-}
-
-.custab-front {
-  background: #BBDDE5;
-  line-height: 20px;
-  font-weight: bold;
-  padding: 4px 15px 4px 18px;
-  border-right: 2px solid #278296;
-  cursor: hand;
-  cursor: pointer;
-  margin: -5px -5px -5px -3px;
-}
-
-.custab-back {
-  color: #FFF;
-  line-height: 20px;
-  padding: 4px 15px 4px 18px;
-  border-right: 1px solid #FFF;
-  cursor: hand;
-  cursor: pointer;
-}
-
-.custab-hover {
-  color: #FFF;
-  background: #94C9D3;
-  line-height: 20px;
-  padding: 4px 15px 4px 18px;
-  border-right: 1px solid #FFF;
-  cursor: hand;
-  cursor: pointer;
-}
-
-#custabbody-div {
-  border: 2px solid #BBDDE5;
-  padding: 10px;
-  background: #FFF;
-}
-
-#custabbody-div img {
-  vertical-align: middle;
-}
-
-.custab-body {
-  border: 0px solid #BBDDE5;
-  padding: 10px;
-}
-
-.cloud_close{  position:relative;border-bottom: 1px solid #302828; background: #ffffff; padding: 10px; margin-bottom: 5px;position:relative; margin-bottom: 5px; font-size:14px; font-family:"微软雅黑"
-}
-.cloud_close a{}
-.cloud_close img{ position:absolute; right:10px; top:8px; border:none}
-.Start315{border: 1px solid #CC0000; background: #ffffcc; padding: 10px; margin-bottom: 5px;}
-
-/*模板列表*/
-.temp-area{
-  padding-top: 20px;
-  background: #f4fafb;
-  border: 1px solid #BBDDE5;
-}
-.temp-area .temp-info{
-  border: none;
-  background: #f4fafb;
-}
-
-.temp-area td{
-  text-align: left;
-}
-
-.temp-area .temp-info table{
-  border: none;
-}
-.temp-area .temp-info th{
-  padding-top: 15px;
-  color: #278296;
-  text-align: left;
-  line-height:58px;
-  padding: 0 0 0 100px;
-  /*background: #BBDDE5 url("../images/th_bg.gif") repeat-x;*/
-  background: -moz-linear-gradient(0deg, rgba(194,206,210,1) 0%, rgba(221,238,242,1) 100%); /* ff3.6+ */
-  background: -webkit-gradient(linear, left top, right top, color-stop(0%, rgba(194,206,210,1)), color-stop(100%, rgba(221,238,242,1))); /* safari4+,chrome */
-  background: -webkit-linear-gradient(0deg, rgba(194,206,210,1) 0%, rgba(221,238,242,1) 100%); /* safari5.1+,chrome10+ */
-  background: -o-linear-gradient(0deg, rgba(194,206,210,1) 0%, rgba(221,238,242,1) 100%); /* opera 11.10+ */
-  background: -ms-linear-gradient(0deg, rgba(194,206,210,1) 0%, rgba(221,238,242,1) 100%); /* ie10+ */
-  background: linear-gradient(90deg, rgba(194,206,210,1) 0%, rgba(221,238,242,1) 100%); /* w3c */
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#c2ced2', endColorstr='#ddeef2',GradientType=1 ); /* ie6-9 */
-  white-space: nowrap;
-  font-size: 18px;
-  font-weight: 600;
-}
-
-.default-tmp-pic{
-  width: 570px;
-  height: 350px;
-}
-
-.temp-list{
-  padding: 0 35px 130px;
-}
-
-.temp-list .list-hd{
-  clear: both;
-  height: 48px;
-  margin: 0;
-  padding-left: 72px;
-  border-bottom: 1px solid #ddeef2;
-  color: #278296;
-}
-
-.temp-list .list-hd span,.temp-list .list-hd .btn-upload  {
-  float: right;
-}
-
-.temp-list .list-hd .tit{
-  float:left;
-  height: 46px;
-  width: 86px;
-  font-size: 20px;
-  line-height: 46px;
-  text-align: center;
-  border-bottom: 2px solid #278296;
-}
-.temp-list .list-bd{
-  padding-top: 90px;
-}
-.temp-list .list-bd .items{
-  margin-bottom: 90px;
-  display:-moz-inline-stack;
-  display:inline-block;
-  vertical-align:top;
-  zoom:1;
-  *display:inline;
-}
-.temp-list .temp-img-contain{
-  width: 315px;
-  height: 292px;
-  margin: 0 10px;
-  padding: 10px 40px;
-  background: #fff;
-  text-align: center;
-  box-shadow: 0 2px 5px 2px rgba(0,0,0,.2);
-}
-.temp-list .temp-img{
-  cursor:pointer;
-  width: 315px;
-  height: 230px;
-}
-.temp-list .temp-btns{
-  color: #939394;
-  width: 160px;
-  margin: 28px auto 0;
-  font-size: 16px;
-}
-
-.temp-list .temp-btns span{
-  display: inline-block;
-  width: 57px;
-  height: 20px;
-  vertical-align: text-bottom;
-}
-
-.temp-list .btn-use{
-  margin-right: 5px;
-  background: url(../images/sprit.png) -1px -234px;
-}
-
-.temp-list .btn-use:hover{
-  background: url(../images/sprit.png) -1px -262px;
-}
-
-.temp-list .btn-delete{
-  margin-left: 5px;
-  background: url(../images/sprit.png) 0 -295px;
-}
-
-.temp-list .btn-delete:hover{
-  background: url(../images/sprit.png) 0 -323px;
-}
-.btn-upload{
-  position: relative;
-  margin-right: 38px;
-}
-.btn-upload input[type="file"]{
-  position: absolute;
-  right: 0;
-  z-index: 2;
-  opacity: 0;
-  width: 130px;
-  height: 45px;
-}
-.btn-upload span{
-  position: absolute;
-  top: 0;
-  right: 0;
-  width: 130px;
-  height: 45px;
-  line-height: 45px;
-  text-align: center;
-  font-size: 18px;
-  background: url(../images/sprit.png) -71px -538px;
-}
-.btn-upload:hover span{
-  background: url(../images/sprit.png) -70px -477px;
-}
-.btn-temp-online{
-  position: relative;
-  top: -17px;
-  width: 163px;
-  height: 60px;
-  background: url(../images/sprit.png) -37px -699px;
-}
-.btn-temp-online:hover{
-  background: url(../images/sprit.png) -36px -618px;
-}
-.btn-search{
-  cursor: pointer;
-}
-
-/*panel style --by evelyn*/
-.panel-hint{
-  position: fixed;
-  top: 20%;
-  left: 0;
-  right: 0;
-  z-index: 99;
-  margin: 0 auto;
-  width: 795px;
-  height: 502px;
-  background: #fff;
-  -webkit-box-shadow: 0px 3px 15px rgba(0,0,0,.3);
-  -moz-box-shadow: 0px 3px 15px rgba(0,0,0,.3);
-  box-shadow: 0px 3px 15px rgba(0,0,0,.3);
-}
-.panel-hint button{
-  display: inline-block;
-  -webkit-appearance: none;
-  font-size: 18px;
-  border: none;
-}
-.panel-hint .panel-hd{
-  position: relative;
-  padding-left: 150px;
-  color: #fff;
-  width: 645px;
-  height: 70px;
-  font-size: 20px;
-  font-weight: bold;
-  line-height: 70px;
-  background: -moz-linear-gradient(270deg, rgba(127,188,202,1) 0%, rgba(41,130,150,1) 100%); /* ff3.6+ */
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, rgba(127,188,202,1)), color-stop(100%, rgba(41,130,150,1))); /* safari4+,chrome */
-  background: -webkit-linear-gradient(270deg, rgba(127,188,202,1) 0%, rgba(41,130,150,1) 100%); /* safari5.1+,chrome10+ */
-  background: -o-linear-gradient(270deg, rgba(127,188,202,1) 0%, rgba(41,130,150,1) 100%); /* opera 11.10+ */
-  background: -ms-linear-gradient(270deg, rgba(127,188,202,1) 0%, rgba(41,130,150,1) 100%); /* ie10+ */
-  background: linear-gradient(180deg, rgba(127,188,202,1) 0%, rgba(41,130,150,1) 100%); /* w3c */
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#7FBCCA', endColorstr='#298296',GradientType=0 ); /* ie6-9 */
-}
-
-.panel-hint .panel-hd .hd-icon {
-  position: absolute;
-  left: 40px;
-  top: -5px;
-  width: 95px;
-  z-index: 23;
-  height: 95px;
-  background: url(../images/sprit.png) -105px -285px;
-}
-
-.panel-hint .hd-cross{
-  position: absolute;
-  right: 35px;
-  top: 25px;
-  width: 19px;
-  height: 16px;
-  z-index: 23;
-  background: url(../images/sprit.png) -182px -206px;
-}
-
-.panel-hint .panel-bd{
-  padding-left: 125px;
-}
-
-.panel-hint .panel-ft{
-  text-align: center;
-}
-.panel-hint .btn-act {
-  width: 165px;
-  height: 65px;
-  font-size: 18px;
-  line-height: 60px;
-  background: url(../images/sprit.png) -38px -392px;
-}
-.panel-hint .btn-act:hover{
-  outline: none;
-  background: url(../images/sprit.png) -39px 0;
-}
-.panel-upload-temp .bd-up{
-  margin-bottom: 45px;
-}
-.panel-upload-temp .bd-up h5{
-  font-weight: normal;
-  font-size: 18px;
-}
-.panel-upload-temp .btn-review{
-  color: #fff;
-  width: 218px;
-  height: 58px;
-  padding-left: 45px;
-  margin-right: 10px;
-  background: url(../images/sprit.png) -1px -777px;
-}
-.panel-upload-temp .bd-up span{
-  vertical-align: bottom;
-  color: #747474;
-}
-.panel-upload-temp .bd-up i{
-  vertical-align: bottom;
-  font-style: normal;
-}
-.panel-upload-temp .step-hint{
-  position: relative;
-}
-.panel-upload-temp .step-hint::before{
-  content: '';
-  position: absolute;
-  top: -10px;
-  left: -50px;
-  width: 45px;
-  height: 45px;
-  background: url(../images/sprit.png) 0 -500px;
-}
-.panel-process{
-  display: none;
-  height: 90px;
-  width: 620px;
-  padding: 50px 30px 0;
-  border-radius: 15px;
-}
-.panel-process .icon-cross{
-  display: inline-block;
-  vertical-align: 10px;
-  margin-left: 20px;
-  width: 15px;
-  height: 15px;
-  background: url(../images/sprit.png) no-repeat 0 -438px;
-}
-.panel-word{
-  font-size: 15px;
-}
-.panel-underline{
-  padding-bottom: 10px;
-  border-bottom: 1px solid #ddd;
-}
-.panel-hint .btn-confirm{
-  font-size: 18px;
-  display: inline-block;
-  margin-right: 30px;
-}
-.list-div .panel-ft a:link,.list-div .panel-ft a:hover{
-  color: #192E32;
-  text-decoration: none;
-}
-.list-div .panel-ft a:hover{
-  font-weight: bold;
-}
-
-/*panel style --by evelyn*/
-
-
-/*panel pop*/
-.panel-par{
-  position: relative;
-}
-.panel-pop{
-  position: absolute;
-  top: -45%;
-  left: 210px;
-  display: none;
-  padding: 10px 20px;
-  background: rgba(255,255,255,.8);
-  border-radius: 10px;
-  box-shadow: 0 1px 10px 1px rgba(0,0,0,.1);
-}
-.panel-pop::after{
-  content: '';
-  position: absolute;
-  left: -14px;
-  top: 32%;
-  z-index: 2;
-  border: 7px solid transparent;
-  border-right: 7px solid rgba(255,255,255,.8);
-}
-.panel-hint-ERP{
-  width: 536px;
-  height: 338px;
-
-}
-.panel-hint-ERP .panel-hd{
-  width: 386px;
-}
-.panel-hint-ERP .panel-bd{
-  font-weight: normal;
-  padding: 0;
-  font-size: 24px;
-  text-align: center;
-}
-.panel-hint-ERP .panel-bd h5{
-  margin: 0;
-  padding: 68px 0;
-  font-weight: normal;
-}
-/*panel pop*/
-
-
-/* loadBar style --by evelyn*/
-.loadBar {
-  display: inline-block;
-  width: 565px;
-  height: 10px;
-  margin: 12px auto;
-  border-radius: 20px;
-  position: relative;
-  background: #D4D9DD;
-  box-shadow: inset 0 0 2px 1px #d1d1d1;
-}
-
-.loadBar div {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-}
-
-.loadBar div span, .loadBar div i
-{
-  display: block;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 0%;
-  height: 100%;
-  border-radius: 20px;
-}
-
-.loadBar div i {
-  width: 100%;
-  animation: move .8s linear infinite;
-  -webkit-animation: linear .8s ease infinite;
-  background: -webkit-linear-gradient(left top, #D7AF46 0%, #D7AF46 10%, #FCC95A 10%, #FCC95A 50%, #D7AF46 50%, #D7AF46 60%, #FCC95A 60%, #FCC95A 100%);
-  background-size: 8px 8px;
-}
-
-.loadBar .percentNum {
-  position: absolute;
-  top: -40px;
-  left: 0;
-  padding: 6px 8px;
-  border-radius: 6px;
-  border: 1px solid #52A0EB;
-  background-color: #52A0EB;
-  color: #fff;
-}
-
-.loadBar .percentNum:after{
-  content:'';
-  position: absolute;
-  bottom: -16px;
-  left: 0;
-  right: 0;
-  width: 0;
-  margin: 0 auto;
-  border: 8px solid transparent;
-  border-top: 8px solid #52A0EB;
-}
-
 @-webkit-keyframes move {
   0% {
     background-position: 0 0;
@@ -679,10 +63,7 @@ em, cite, th {
     background-position: 40px 0;
   }
 }
-/* loadBar style --by evelyn*/
 
-.form-header { width: 1200px; margin: 0 auto; padding: 17px 0;}
-.form-header .logo { width: 160px; height: 46px; background: url(../images/ecshop_logo_01.png) no-repeat center;}
 /*login page --by evelyn*/
 .login-hd{ background: none; height: 44px; padding: 40px 0 40px 50px; }
 .center-wrap{ width: 1200px; margin: 0 auto; overflow: auto;}
@@ -697,7 +78,6 @@ em, cite, th {
   padding-bottom: 42px;
   padding-top: 80px;
   height: 400px;
-  background: url(../images/yunqi_bg_02.png) no-repeat bottom center;
 }
 .z-bd .login-panel {
   position: absolute;
@@ -720,7 +100,7 @@ em, cite, th {
 }
 .z-bd .login-panel .logo-text { margin: 0;}
 .z-bd .login-panel .logo-text .text { color: #d77f39; font-size: 18px; line-height: 40px; text-align: center; margin: 0; padding: 0;}
-.z-bd .login-panel .logo-text .logo { width: 162px; height: 42px; margin: 0 auto; background: url(../images/ecshop_logo_03.png) no-repeat center;}
+.z-bd .login-panel .logo-text .logo { width: 162px; height: 42px; margin: 0 auto; background: url(/img/admin/ecshop_logo_03.png) no-repeat center;}
 .z-bd .login-panel .ecshop-logo { padding: 46px 0 30px; }
 .z-bd .login-panel .yunqi-logo { padding: 30px 0 8px;}
 .z-bd .login-panel.cloud{
@@ -748,10 +128,10 @@ em, cite, th {
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f0e7df', endColorstr='#ffffff',GradientType=1 ); /* ie6-9 */
 }
 .z-bd .login-cloud.ecshop .btn-tab{
-  background: url(../images/ecshop-n.png) no-repeat center center;
+  background: url(/img/admin/ecshop-n.png) no-repeat center center;
 }
 .z-bd .login-cloud.ecshop .btn-tab:hover{
-  background: url(../images/ecshop-h.png) no-repeat center center;
+  background: url(/img/admin/ecshop-h.png) no-repeat center center;
 }
 .login-panel .panel-hd{
   padding-bottom: 10px;
@@ -969,20 +349,6 @@ em, cite, th {
 .btn-fixed{
   position: fixed;
 }
-#menu-div .btn-bind span,#menu-div .btn-bind a{
-  position: relative;
-  top: 0;
-  right: -20px;
-  width: 140px;
-  height: 43px;
-  border: none;
-  display:block;
-  background: url(../images/btn-bind.gif) no-repeat 0 6px;
-  cursor:pointer;
-}
-#menu-div .btn-bind{
-  border: none;
-}
 .btn-ERP{
   position: relative;
   float: right;
@@ -1042,102 +408,3 @@ h1 .btn-quick-goods a:hover{
   background-position: -66px -1163px;
 }
 #turn-page{ text-align: right;  }
-
-/*云起激活页面 --by evelyn*/
-.panel-icloud{
-  display: none;
-  width: 820px;
-  height: 407px;
-  background: #fff;
-  border-radius: 5px;
-  padding: 20px 40px;
-}
-.panel-icloud .panel-cross{
-  text-align: right;
-  color: #7e7e7e;
-}
-.panel-icloud .panel-cross span{
-  cursor: pointer;
-}
-.panel-icloud .panel-title .tit{
-  font-size: 22px;
-}
-.panel-icloud .panel-title p{
-  font-size: 14px;
-}
-.panel-icloud .panel-left{
-  text-align: center;
-  float: left;
-  width: 300px;
-  padding: 60px 70px 30px 30px;
-  border-right: 1px dashed #ddd;
-}
-.panel-icloud .panel-left span{
-  color: #f6933e;
-  font-size: 20px;
-}
-.panel-icloud .panel-left p{
-  color: #f6933e;
-  font-size: 14px;
-  padding-bottom: 60px;
-}
-.panel-icloud .panel-left a{
-  display: block;
-  color: #f6933e;
-  width: 100%;
-  height: 50px;
-  font-size: 14px;
-  line-height: 50px;
-  border-radius: 5px;
-  background: #fff7f2;
-  border: 1px solid #f79327;
-}
-.panel-icloud .panel-left a:hover{
-  text-decoration: none;
-}
-.panel-icloud .panel-right{
-  float: left;
-  width: 300px;
-  height: 272px;
-  padding: 0 30px 0 70px;
-}
-.panel-icloud .panel-right h5{
-  display: block;
-  width: 70px;
-  height: 24px;
-  margin: 0 auto;
-  background: url(../images/icloud-sm.png) no-repeat;
-  text-indent: -9999px;
-}
-.panel-icloud .panel-right iframe{
-  width: 300px;
-  height: 200px;
-}
-.ban-area{
-  width: 100%;
-  height: 300px;
-  overflow: hidden;
-  margin-bottom: 20px;
-  border: 1px solid #7FBDCA;
-}
-.ban-area .inn{
-  width: 950px;
-  margin: 0 auto;
-}
-.ban-area iframe{
-  float: left;
-}
-.ban-area iframe.first{
-  margin-right: 50px;
-}
-/*遮罩*/
-.mask-black{
-  display: none;
-  position: fixed;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  z-index: 10;
-  background: rgba(51,51,51,.8);
-}
