--- a/public/css/admin/login.css
+++ b/public/css/admin/login.css
@@ -81,7 +81,7 @@ input.capital {
   width: 162px; 
   height: 42px; 
   margin: 0 auto; 
-  background: url(/img/ecshop_logo_03.png) no-repeat center;
+  background: url(/img/ecs_logo_03.png) no-repeat center;
 }
 .z-bd .login-panel .ecshop-logo { 
   padding: 46px 0 30px; 
