--- a/public/css/admin/general.css
+++ b/public/css/admin/general.css
@@ -3,6 +3,7 @@ body {
   padding: 10px;
   color: #192E32;
   font: 12px Microsoft Yahei, "sans-serif", "Arial", "Verdana";
+  font-family: Microsoft Yahei;
   background: #fff;
 }
 
